Changelog
=========

4.0a3 - unreleased
------------------

- Rewrote ``getTranslationReferences`` internals to avoid the catalog search
  API and make use of knowledge of its internals.
  [hannosch]

- In the TranslatableLanguageSelector only append a question mark, if there's
  a query string to append.
  [hannosch]

4.0a2 - 2010-09-08
------------------

- Make the ``set_language`` query string addition configurable via a class
  variable on the TranslatableLanguageSelector.
  [hannosch]

4.0a1 - 2010-07-28
------------------

- Added test for deleting canonical folders. Added minimum version requirement
  on Products.ATContentTypes 2.0.2 for the fix to
  http://plone.org/products/linguaplone/issues/241.
  [hannosch]

- Fixed language selector logic to correctly deal with all kinds of VHM rules.
  This closes http://plone.org/products/linguaplone/issues/240.
  [hannosch]

- Change the language selector viewlet to be shown in the IPortalHeader manager
  to be consistent with the new default location in Plone 4. This closes
  http://plone.org/products/linguaplone/issues/248.
  [hannosch]

- Require at least Zope 2.12.5 and remove the `-C` work around.
  [hannosch]

- Renamed migrations module to upgrades to match current nomenclature.
  [hannosch]

- Removed Archetypes uid and reference catalog GenericSetup handlers. These
  are part of Archetypes now.
  [hannosch]

- Removed Plone 3.3 specific tests.
  [hannosch]

- Added tests for all upgrade steps.
  [hannosch]

- Removed all dependencies on zope.app packages.
  [hannosch]

- Specify all package dependencies.
  [hannosch]

- Added dependency on Plone 4. Please use a release from the 3.x series if
  you are using Plone 3.
  [hannosch]

3.1 - 2010-07-28
----------------

- No changes.

3.1b1 - 2010-07-18
------------------

- Update license to GPL version 2 only.
  [hannosch]

- If catalog filter attributes contain "Language", and "Language" is
  set to all, don't add Language filters to the REQUEST object