@@ -4,8 +4,9 @@ Changelog
 4.0a3 - unreleased
 ------------------
 
-- Rewrote ``getTranslationReferences`` internals to avoid the catalog search
-  API and make use of knowledge of its internals.
+- Rewrote ``getTranslationReferences`` and ``getTranslationBackReferences``
+  internals to avoid the catalog search API and make use of knowledge of its
+  internals.
   [hannosch]
 
 - In the TranslatableLanguageSelector only append a question mark, if there's
